Added  logger and some meta data information

--- a/src/MoneyAssessment.Tests/MoneyAssessment.Tests.csproj
+++ b/src/MoneyAssessment.Tests/MoneyAssessment.Tests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BigDataHelper.cs" />
+    <Compile Include="MockLogger.cs" />
     <Compile Include="MoneyCalculatorFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
